Testsuite/ManualTests/2913/2913.c.gcov
        -:    0:Source:2913.c
        -:    0:Graph:2913.gcno
        -:    0:Data:2913.gcda
        -:    0:Runs:1
        -:    1:/* Functional tests for the function hotpatching feature.  */
        -:    2:
        -:    3:/* { dg-do compile } */
        -:    4:/* { dg-options "-O3 -mzarch" } */
        -:    5:
        -:    6:__attribute__((hotpatch(0, 0, 0))) int
        1:    7:main(void) { /* { dg-error "wrong number of arguments specified" } */
        1:    8:  return 0;
        -:    9:}
